testsuite/tests/typecheck/should_fail/tcfail166.stderr

tcfail166.hs:6:13: error:
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Perhaps you intended to use RankNTypes
      or a similar language extension to enable explicit-forall syntax: forall <tvs>. <type>
